Add some improvements for builders

--- a/src/classes/ArtistBuilder.cls
+++ b/src/classes/ArtistBuilder.cls
@@ -1,8 +1,9 @@
 public class ArtistBuilder {
     private MBMS_Artist__c artist;
     
-    public ArtistBuilder() {
+    public ArtistBuilder createNewRecord() {
         this.artist = new MBMS_Artist__c();
+        return this;
     }
     
     public ArtistBuilder withName(String name) {
@@ -52,6 +53,7 @@ public class ArtistBuilder {
     
     public MBMS_Artist__c buildWithAllFields() {
         return this
+            .createNewRecord()
             .withName(MBMS_Constants.MBMS_TEST_STRING_VALUE)
             .withFirstName(MBMS_Constants.MBMS_TEST_STRING_VALUE)
             .withLastName(MBMS_Constants.MBMS_TEST_STRING_VALUE)
