--- a/src/classes/MoviePhotoBuilder.cls
+++ b/src/classes/MoviePhotoBuilder.cls
@@ -1,8 +1,9 @@
 public class MoviePhotoBuilder {
     private MBMS_Movie_Photo__c moviePhoto;
     
-    public MoviePhotoBuilder() {
+    public MoviePhotoBuilder createNewRecord() {
         this.moviePhoto = new MBMS_Movie_Photo__c();
+        return this;
     }
     
     public MoviePhotoBuilder withName(String name) {
@@ -25,10 +26,15 @@ public class MoviePhotoBuilder {
         return this;
     }
     
+    /*
+     Should not be used in the loops due to SOQL limit - it inserts related fields.
+     This method is used to create a single record (with all fields) for test purposes.
+     */
     public MBMS_Movie_Photo__c buildWithAllFields() {
         MBMS_Movie__c movie = new MovieBuilder().buildWithAllFieldsAndInsert();
         
         return this
+            .createNewRecord()
             .withName(MBMS_Constants.MBMS_TEST_STRING_VALUE)
             .withMovie(movie)
             .withPhotoURL(MBMS_Constants.MBMS_TEST_STRING_VALUE)
