--- a/src/classes/ArtistsRemovalBatchTest.cls
+++ b/src/classes/ArtistsRemovalBatchTest.cls
@@ -26,6 +26,39 @@ private class ArtistsRemovalBatchTest {
     }
     
     @isTest
+    private static void shouldDeleteExistingArtistsBulk() {
+        removeExistingArtists();
+        
+        List<MBMS_Artist__c> artists = new List<MBMS_Artist__c>();
+        ArtistBuilder builder = new ArtistBuilder();
+        
+        for (Integer i = 0; i < 200; i++) {
+            artists.add(builder
+                       .createNewRecord()
+                       .withFirstName(MBMS_Constants.MBMS_TEST_STRING_VALUE)
+                       .withLastName(MBMS_Constants.MBMS_TEST_STRING_VALUE)
+                       .withRoles(new List<String> { MBMS_Constants.MBMS_ROLE_AUTHOR, MBMS_Constants.MBMS_ROLE_ACTOR })
+                       .withStatus(MBMS_Constants.MBMS_STATUS_REJECTED)
+                       .build());
+        }
+        
+        insert artists;
+        
+        for (MBMS_Artist__c artist : artists) {
+            Test.setCreatedDate(artist.Id, MBMS_Constants.MBMS_TEST_DATE_10_DAYS_BEFORE_TODAY);
+        }
+        
+        Test.startTest();
+        ArtistsRemovalBatch removalBatch = new ArtistsRemovalBatch();
+        Database.executeBatch(removalBatch);
+        Test.stopTest();
+        
+        artists = [SELECT Id FROM MBMS_Artist__c];
+        
+        System.assertEquals(0, artists.size());
+    }
+    
+    @isTest
     private static void shouldNotDeleteExistingArtists() {
         List<MBMS_Artist__c> artists = [SELECT Id FROM MBMS_Artist__c];
         
@@ -36,5 +69,9 @@ private class ArtistsRemovalBatchTest {
         
         artists = [SELECT Id FROM MBMS_Artist__c];
         System.assert(artists.size() > 0);
+    }
+    
+    private static void removeExistingArtists() {
+        delete [SELECT Id FROM MBMS_Artist__c];
     }
 }
