--- a/src/classes/BatchRunLogger.cls
+++ b/src/classes/BatchRunLogger.cls
@@ -1,8 +1,10 @@
-public class BatchRunLogger {
+public virtual class BatchRunLogger {
+    private MBMS_Batch_Log__c batchLog;
 	private String batchName;
     private Long startTimeInMilliseconds;
     private Integer successesCount = 0;
     private Integer errorsCount = 0;
+    private String message;
 
     public BatchRunLogger(String batchName) {
         this.batchName = batchName;
@@ -14,13 +16,16 @@ public class BatchRunLogger {
     }
     
     public void stopLogging() {
-        System.debug(String.format('[ {0} ] Batch job done. Total amount of processed records: {1} ({2} errors). Total time of the job in milliseconds: {3}.',
-                                   new List<String> {
-                                       String.valueOf(this.batchName),
-                                       String.valueOf(this.successesCount + this.errorsCount),
-                                       String.valueOf(this.errorsCount),
-                                       String.valueOf(Datetime.now().millisecond() - this.startTimeInMilliseconds) }
-                                  ));
+        this.message = String.format('[ {0} ] Batch job done. Total amount of processed records: {1} ({2} errors). Total time of the job in milliseconds: {3}.',
+                                     new List<String> {
+                                         String.valueOf(this.batchName),
+                                         String.valueOf(this.getTotalNumberOfRecordsProcessed()),
+                                         String.valueOf(this.errorsCount),
+                                         String.valueOf(Datetime.now().millisecond() - this.startTimeInMilliseconds) }
+                                    );
+        System.debug(message);
+        
+        this.buildAndInsertBatchLog();
     }
     
     public void logErrorMessage(String message) {
@@ -33,5 +38,18 @@ public class BatchRunLogger {
 
     public void incrementErrorsCount() {
         this.errorsCount++;
+    }
+    
+    private Integer getTotalNumberOfRecordsProcessed() {
+        return this.successesCount + this.errorsCount;
+    }
+    
+    private void buildAndInsertBatchLog() {
+        this.batchLog = new BatchLogBuilder()
+            .withName(String.format('{0} Log {1}', new List<String> { this.batchName, String.valueOf(Datetime.now()) }))
+            .withBatchName(this.batchName)
+            .withMessage(message)
+            .withRecordsProcessed(this.getTotalNumberOfRecordsProcessed())
+            .buildAndInsert();
     }
 }
