--- a/src/classes/MoviesRemovalBatchTest.cls
+++ b/src/classes/MoviesRemovalBatchTest.cls
@@ -2,7 +2,9 @@
 private class MoviesRemovalBatchTest {
     @testSetup
     static void testDataSetup() {
-        MBMS_Movie__c movie = new MovieBuilder().buildWithAllFieldsAndInsert();
+        new MovieBuilder()
+            .createNewRecord()
+            .buildWithAllFieldsAndInsert();
     }
     
     @isTest
