--- a/src/classes/BatchLogsListControllerTest.cls
+++ b/src/classes/BatchLogsListControllerTest.cls
@@ -3,7 +3,7 @@ private class BatchLogsListControllerTest {
     @testSetup
     static void testDataSetup() {
         new BatchLogBuilder()
-            .createNewRecord()
+            .create()
             .buildWithAllFieldsAndInsert();
     }
     
