--- a/src/classes/BookBuilder.cls
+++ b/src/classes/BookBuilder.cls
@@ -1,7 +1,7 @@
 public class BookBuilder {   
     private MBMS_Book__c book;
     
-    public BookBuilder createNewRecord() {
+    public BookBuilder create() {
         this.book = new MBMS_Book__c();
         return this;
     }
@@ -41,10 +41,11 @@ public class BookBuilder {
      This method is used to create a single record (with all fields) for test purposes.
      */
     public MBMS_Book__c buildWithAllFields() {
-        MBMS_Artist__c artist = new ArtistBuilder().buildWithAllFieldsAndInsert();
+        MBMS_Artist__c artist = new ArtistBuilder()
+            .create()
+            .buildWithAllFieldsAndInsert();
         
         return this
-            .createNewRecord()
             .withArtist(artist)
             .withName(MBMS_Constants.MBMS_TEST_STRING_VALUE)
             .withDescription(MBMS_Constants.MBMS_TEST_STRING_VALUE)
