--- a/src/classes/BooksListControllerTest.cls
+++ b/src/classes/BooksListControllerTest.cls
@@ -2,7 +2,9 @@
 private class BooksListControllerTest {
     @testSetup
     static void testDataSetup() {
-        MBMS_Book__c book = new BookBuilder().buildWithAllFieldsAndInsert();
+        new BookBuilder()
+            .create()
+            .buildWithAllFieldsAndInsert();
     }
     
     @isTest
