--- a/src/classes/ArtistTriggerHandlerTest.cls
+++ b/src/classes/ArtistTriggerHandlerTest.cls
@@ -2,7 +2,9 @@
 private class ArtistTriggerHandlerTest {
     @testSetup
     static void testDataSetup() {
-        MBMS_Artist__c artist = new ArtistBuilder().buildWithAllFieldsAndInsert();
+        new ArtistBuilder()
+            .create()
+            .buildWithAllFieldsAndInsert();
     }
     
     @isTest
