--- a/src/classes/MovieTriggerHandlerTest.cls
+++ b/src/classes/MovieTriggerHandlerTest.cls
@@ -2,7 +2,9 @@
 private class MovieTriggerHandlerTest {
     @testSetup
     static void testDataSetup() {
-        MBMS_Movie__c movie = new MovieBuilder().buildWithAllFieldsAndInsert();
+        new MovieBuilder()
+            .create()
+            .buildWithAllFieldsAndInsert();
     }
     
     @isTest
