Add new constant values

--- a/src/classes/MBMS_Constants.cls
+++ b/src/classes/MBMS_Constants.cls
@@ -14,6 +14,7 @@ public class MBMS_Constants {
     public final static String MBMS_ROLE_ACTOR = 'MBMS_Actor';
     public final static String MBMS_ROLE_DIRECTOR = 'MBMS_Director';
     public final static String MBMS_ROLE_WRITER = 'MBMS_Writer';
+    public final static List<String> MBMS_ROLES_LIST = new List<String> { MBMS_ROLE_AUTHOR, MBMS_ROLE_ACTOR, MBMS_ROLE_DIRECTOR, MBMS_ROLE_WRITER };
 
     // Record statuses.
     public final static String MBMS_STATUS_INITIAL = 'Initial';
@@ -21,4 +22,7 @@ public class MBMS_Constants {
     public final static String MBMS_STATUS_REJECTED = 'Rejected';
     
     public final static Date MBMS_RECORDS_RETENTION_DATE =  Date.today().addDays(-7);
+    
+    public final static String MBMS_NAMESPACE_PREFIX = 'MBMS_';
+    public final static String MBMS_CUSTOM_OBJECT_SUFFIX = '__c';
 }
