--- a/src/classes/MovieActorTriggerHandler.cls
+++ b/src/classes/MovieActorTriggerHandler.cls
@@ -1,15 +1,21 @@
 public class MovieActorTriggerHandler {
     public void onBeforeInsert(List<MBMS_Movie_Actor__c> movieActors) {
-        List<Id> actorsIds = new List<Id>();
+        Map<Id, MBMS_Artist__c> artists = new Map<Id, MBMS_Artist__c>();
         
         for (MBMS_Movie_Actor__c movieActor : movieActors) {
-            actorsIds.add(movieActor.MBMS_Artist__c);
+            artists.put(movieActor.MBMS_Artist__c, null);
         }
         
-        List<MBMS_Artist__c> actors = [SELECT Name FROM MBMS_Artist__c WHERE Id IN :actorsIds];
+        artists.putAll([SELECT Name FROM MBMS_Artist__c WHERE Id = :artists.keySet()]);
         
-        for (Integer i = 0; i < movieActors.size(); i++) {
-            movieActors[i].Name = String.format('{0} as {1}', new List<String> { actors[i].Name, movieActors[i].MBMS_Character_Name__c });
+        for (MBMS_Movie_Actor__c movieActor: movieActors) {
+            MBMS_Artist__c artist = artists.get(movieActor.MBMS_Artist__c);
+            
+            String characterNames = movieActor.MBMS_Character_Name__c.replace(';', ', ');
+            
+            if (artist != null) {
+                movieActor.Name = String.format('{0} as {1}', new List<String> { artist.Name, characterNames });
+            }
         }
     }
 }
