--- a/src/classes/MoviesListController.cls
+++ b/src/classes/MoviesListController.cls
@@ -2,7 +2,7 @@ public with sharing class MoviesListController {
     @AuraEnabled
     public static List<MBMS_Movie__c> getMoviesList() {
         return [SELECT Id, Name, MBMS_Title__c,
-                MBMS_Director__c, MBMS_Writer__c
+                MBMS_Director__r.Name, MBMS_Writer__r.Name
                 FROM MBMS_Movie__c];
     }
     
