--- a/src/classes/ArtistTriggerHandler.cls
+++ b/src/classes/ArtistTriggerHandler.cls
@@ -4,4 +4,11 @@ public class ArtistTriggerHandler {
             artist.Name = String.format('{0} {1}', new List<String> { artist.MBMS_First_Name__c, artist.MBMS_Last_Name__c });
         }   
     }
+    
+    public void onBeforeDelete(List<MBMS_Artist__c> artists) {
+        Set<Id> artistIds = (new Map<Id, MBMS_Artist__c>(artists)).keySet();
+        List<MBMS_Movie_Actor__c> movieActors = [SELECT Id FROM MBMS_Movie_Actor__c WHERE MBMS_Artist__r.Id IN :artistIds];
+        
+        delete movieActors;
+    }
 }
