--- a/src/classes/ArtistTriggerHandlerTest.cls
+++ b/src/classes/ArtistTriggerHandlerTest.cls
@@ -19,4 +19,23 @@ private class ArtistTriggerHandlerTest {
         
         System.assertEquals(expectedName, artist.Name);
     }
+    
+    @isTest
+    static void triggerShouldDeleteRelatedMovieActorAfterArtistDeletion() {
+        Test.startTest();
+        MBMS_Artist__c artist = [SELECT Id FROM MBMS_Artist__c LIMIT 1];
+        MBMS_Movie__c movie = new MovieBuilder().create().buildAndInsert();
+        MBMS_Movie_Actor__c movieActor = new MovieActorBuilder()
+            .create()
+            .withCharacterName(MBMS_Constants.MBMS_TEST_STRING_VALUE)
+            .withMovie(movie)
+            .withActor(artist)
+            .buildAndInsert();
+        delete artist;
+        Test.stopTest();
+        
+        List<MBMS_Movie_Actor__c> movieActors = [SELECT Id FROM MBMS_Movie_Actor__c LIMIT 1];
+        
+        System.assertEquals(0, movieActors.size());
+    }
 }
