Add code that deletes related movie actors after movie deletion

--- a/src/classes/MovieTriggerHandler.cls
+++ b/src/classes/MovieTriggerHandler.cls
@@ -4,4 +4,11 @@ public class MovieTriggerHandler {
             movie.Name = movie.MBMS_Title__c;
         }     
     }
+    
+    public void onBeforeDelete(List<MBMS_Movie__c> movies) {
+        Set<Id> movieIds = (new Map<Id, MBMS_Movie__c>(movies)).keySet();
+        List<MBMS_Movie_Actor__c> movieActors = [SELECT Id FROM MBMS_Movie_Actor__c WHERE MBMS_Movie__r.Id IN :movieIds];
+        
+        delete movieActors;
+    }
 }
