--- a/src/classes/MovieActorsListController.cls
+++ b/src/classes/MovieActorsListController.cls
@@ -1,7 +1,7 @@
 public with sharing class MovieActorsListController {
     @AuraEnabled
     public static List<MBMS_Movie_Actor__c> getMovieActors() {
-        return [SELECT Id, Name, MBMS_Character_Name__c, MBMS_Movie__r.Name
+        return [SELECT Id, Name, MBMS_Movie__r.Name
                 FROM MBMS_Movie_Actor__c];
     }
 
