--- a/src/classes/RequiringActionRecordsControllerTest.cls
+++ b/src/classes/RequiringActionRecordsControllerTest.cls
@@ -36,4 +36,33 @@ private class RequiringActionRecordsControllerTest {
         System.assert(requiringActionRecords.size() > 0);
         System.assertNotEquals(null, requiringActionRecords.get(0));
     }
+    
+    @isTest
+    static void requiringActionRecordsShouldNotBeAvailable() {
+        Test.startTest();
+        MBMS_Artist__c artist = [SELECT Id FROM MBMS_Artist__c LIMIT 1];
+        delete artist;
+        
+        Boolean areRequiringActionRecordsAvailable = RequiringActionRecordsController.areRequiringActionRecordsAvailable();
+        Test.stopTest();
+        
+        System.assert(!areRequiringActionRecordsAvailable);
+    }
+    
+    @isTest
+    static void requiringActionRecordsShouldBeAvailable() {
+        Test.startTest();
+        List<MBMS_Artist__c> artists = [SELECT Id FROM MBMS_Artist__c];
+        
+        for (MBMS_Artist__c artist : artists) {
+            artist.MBMS_Status__c = MBMS_Constants.MBMS_STATUS_REJECTED;
+        }
+        
+        update artists;
+        
+        Boolean areRequiringActionRecordsAvailable = RequiringActionRecordsController.areRequiringActionRecordsAvailable();
+        Test.stopTest();
+        
+        System.assert(areRequiringActionRecordsAvailable);
+    }
 }
